# stack

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-09-cli-and-skills-design.md  2026-02-09-stack-implementation.md  2026-02-09-stack-tui-design.md
scrap-rs/docs/plans/: 2026-02-09-vim-visual-mode-design.md
skills/complete-story/: SKILL.md
skills/plan-work/: SKILL.md
skills/start-story/: SKILL.md
skills/view-board/: SKILL.md
src/: actions.rs  app.rs  cli.rs  cli_handler.rs  db.rs  editor.rs  input.rs  main.rs  models.rs
src/ui/: board.rs  detail.rs  epic_list.rs  mod.rs
