[package]
name = "stack"
version = "0.1.3"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-md = { path = "../tui-md" }
